# community-data-files

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  requirements.txt  test-requirements.txt
.github/workflows/: test.yml
__unported__/l10n_eu_nace/: __openerp__.py
__unported__/l10n_fr_naf_ape/: __openerp__.py
account_payment_unece/: README.rst  __init__.py  __manifest__.py  __openerp__.py
account_tax_unece/: README.rst  __manifest__.py  __openerp__.py
allowance_unece/: README.rst  __manifest__.py
base_bank_from_iban/: README.rst  __init__.py  __manifest__.py
base_bic_from_iban/: README.rst  __openerp__.py
base_currency_iso_4217/: README.rst  __manifest__.py
base_iso3166/: README.rst  __manifest__.py  __openerp__.py
base_unece/: README.rst  __manifest__.py  __openerp__.py
code3166/: README.rst  __init__.py  __openerp__.py
company_sanitary_registry/: README.rst  __init__.py  __manifest__.py
l10n_eu_adr_report/: README.rst  __manifest__.py
l10n_eu_nace/: README.rst  __init__.py  __manifest__.py  __openerp__.py  partner.py  partner_view.xml
l10n_eu_product_adr/: README.rst  __manifest__.py
l10n_eu_product_adr_dangerous_goods/: README.rst  __manifest__.py
l10n_fr_naf_ape/: partner.py
product_fao_fishing/: README.rst  __manifest__.py
product_meat_unece/: README.rst  __manifest__.py
product_uom_extra_data/: README.rst  __manifest__.py
product_uom_unece/: README.rst  __manifest__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
uom_unece/: README.rst  __manifest__.py  __openerp__.py
(+461 files in other folders)
