[project]
name = "odoo-addons-oca-community-data-files"
version = "17.0.20240119.0"
dependencies = [
    "odoo-addon-base_bank_from_iban>=17.0dev,<17.1dev",
    "odoo-addon-base_iso3166>=17.0dev,<17.1dev",
    "odoo-addon-uom_unece>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
