[project]
name = "odoo-addons-oca-community-data-files"
version = "17.0.20240311.1"
dependencies = [
    "odoo-addon-account_payment_unece>=17.0dev,<17.1dev",
    "odoo-addon-account_tax_unece>=17.0dev,<17.1dev",
    "odoo-addon-base_bank_from_iban>=17.0dev,<17.1dev",
    "odoo-addon-base_currency_iso_4217>=17.0dev,<17.1dev",
    "odoo-addon-base_iso3166>=17.0dev,<17.1dev",
    "odoo-addon-base_unece>=17.0dev,<17.1dev",
    "odoo-addon-uom_unece>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
